--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.1.0",
     "axios": "^1.6.8",
     "firebase": "^10.12.0",
     "pinia": "^2.1.7",
+    "sweetalert2": "^11.11.0",
     "vee-validate": "^4.12.8",
     "vue": "^3.3.4",
     "vue-router": "^4.3.2",
     "vuetify": "^3.6.6"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "^4.2.3",
     "vite": "^4.4.0"
   }
