--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "@vueuse/motion": "^2.1.0",
     "axios": "^1.6.8",
     "firebase": "^10.12.0",
@@ -17,7 +19,8 @@
     "vee-validate": "^4.12.8",
     "vue": "^3.3.4",
     "vue-router": "^4.3.2",
-    "vuetify": "^3.6.6"
+    "vuetify": "^3.6.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
